2015-06-23  Ken Brown  <kbrown@cornell.edu>

	* include/cygwin/signal.h (SIGEV_*): Add macros.

2015-06-22  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (_cygtls::call_signal_handler): Drop pushing a register
	on the original stack, it confuses GCC.  Rearrange the assembler code
	so that $rax/$eax is not used by GCC to prepare an argument value.
	Use $rax/$eax without saving.  Drop clearing $rbp/$epb.

2015-06-21  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (_cygtls::call_signal_handler): Drop subtracting 16
	bytes from the alternate stack, it's not necessary.  Safe all clobbered
	registers.  Safe one on the orignal stack, the others on the alternate
	stack on both platforms.

2015-06-20  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (_cygtls::call_signal_handler): Implement alternate
	signal stack handling.
	* signal.cc (sigaltstack): Add fault handler.
	* include/cygwin/signal.h: Remove definitions of MINSIGSTKSZ
	and SIGSTKSZ here.

2015-06-19  Corinna Vinschen  <corinna@vinschen.de>

	* common.din (sigaltstack): Export.
	* cygtls.cc (_cygtls::init_thread): Initialize altstack.
	* cygtls.h (__tlsstack_t): Rename from __stack_t to distinguish
	more clearly from stack_t.  Accommodate throughout.
	(_cygtls): Add altstack member.
	* exceptions.cc (exception::handle): Set SIGSEGV handler to SIG_DFL
	if we encounter a stack overflow, and no alternate stack has been
	defined.
	* include/cygwin/signal.h (MINSIGSTKSZ): Define
	(SIGSTKSZ): Define.
	(SA_ONSTACK): Define.
	* signal.cc (sigaltstack): New function.
	* tlsoffset.h: Regenerate.
	* tlsoffset64.h: Ditto.

2015-06-19  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc: Minor formatting fixes.

2015-06-18  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (install-man): Exclude release subdir from search paths.

2015-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (sethostname): New function.
	* common.din (sethostname): Export